Bug 877896 - Print stack trace in the console service. r=bholley